--- a/index.html
+++ b/index.html
@@ -451,4 +451,13 @@
         });
     </script>
 </body>
+    <nav style="background-color:#f2f2f2; padding:10px; text-align:center;">
+  <a href="index.html" style="margin:10px; text-decoration:none; color:#000;">Home</a>
+  <a href="about.html" style="margin:10px; text-decoration:none; color:#000;">About</a>
+  <a href="faq.html" style="margin:10px; text-decoration:none; color:#000;">FAQ</a>
+  <a href="terms.html" style="margin:10px; text-decoration:none; color:#000;">Terms</a>
+  <a href="privacy.html" style="margin:10px; text-decoration:none; color:#000;">Privacy</a>
+  <a href="contact.html" style="margin:10px; text-decoration:none; color:#000;">Contact</a>
+</nav>
+<hr>
 </html>
